[package]
name = "sandesh"
version = "0.1.0"
edition = "2024"
description = "A P2P E2EE Terminal Messaging App"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/AkshatRai07/p2p_messaging"

[dependencies]
crossterm = "0.27"
colored = "2.0"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
anyhow = "1.0"
byteorder = "1.4"
